<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="link"><a href="https://github.com/valentinbreiz/RooWifi-Controller">GitHub Page of the project</a></string>
    <string name="menu_settings">Settings</string>
    <string name="activity_main_title">Connect to the RooWifi card</string>
    <string name="activity_main_button">Connect</string>
    <string name="activity_main_forgotip">You forgot to enter the IP address!</string>
    <string name="activity_main_ipadress">IP Adress</string>

    <string name="activity_main_tuto1">How to get the IP address?</string>
    <string name="activity_main_tuto2">To retrieve the IP address of your RooWifi card, you can follow this short tutorial:</string>
    <string name="activity_main_tuto3">First, plug in the <b>dock</b> for your Roomba vacuum cleaner and place the vacuum cleaner on top of it.</string>
    <string name="activity_main_tuto4">Turn on the vacuum cleaner and connect the RooWifi card to the <b>port</b> above the vacuum cleaner. (see below)</string>
    <string name="activity_main_tuto5">After waiting a few seconds, connect from your computer to the new WiFi network entitled <b>"ROOMBA WR"</b>.</string>
    <string name="activity_main_tuto6">From your browser, enter the address <b>"http://10.0.0.1/"</b>. Once the page is loaded go to the <b>"SetUp Wi-fi Configuration"</b> tab.</string>
    <string name="activity_main_tuto7">In the <b>"Wifi Infrastructure Properties"</b> menu enter the <b>SSID</b> of your personal WiFi network, the <b>key type</b> and then the <b>network encryption key</b>.</string>
    <string name="activity_main_tuto8">Then click the <b>"Save / Reboot"</b> button to save the settings.</string>
    <string name="activity_main_tuto9">Wait a few seconds. Connect to your local network. From your browser, enter the configuration page of your router (often 192.168.1.1 or 192.168.0.1).</string>
    <string name="activity_main_tuto10">In devices connected to your local network, you should see a device named <b>"ROOMBA"</b>. Tap the IP address in that application and press the button above <b>"Connect"</b>.</string>

    <string name="capteur_bumpswhelldrops">Bumps Wheeldrops :</string>
    <string name="capteur_wall">Wall :</string>
    <string name="capteur_cliffleft">Cliff Left :</string>
    <string name="capteur_cliffright">Cliff Right :</string>
    <string name="capteur_cliffFrontLeft">Cliff Front Left :</string>
    <string name="capteur_cliffFrontRight">Cliff Front Right :</string>
    <string name="capteur_DirtDetectorLeft">Dirt Detector - Left :</string>
    <string name="capteur_DirtDetectorRight">Dirt Detector - Right :</string>
    <string name="capteur_voltage">Voltage :</string>
    <string name="capteur_current">Current :</string>
    <string name="capteur_temperature">Temperature :</string>
    <string name="capteur_charge">Charge :</string>
    <string name="capteur_capacity">Capacity :</string>

    <string name="activity_second_information">For more information about sensors, slide towards right.</string>
    <string name="activity_second_nonetwork">You are not connected to any network!\nA WIFI connection is necessary.</string>
    <string name="activity_second_direction_front">Direction: Front</string>
    <string name="activity_second_direction_frontright">Direction: Front Right</string>
    <string name="activity_second_direction_right">Direction: Right</string>
    <string name="activity_second_direction_rearright">Direction: Rear Right</string>
    <string name="activity_second_direction_rear">Direction: Rear</string>
    <string name="activity_second_direction_rearleft">Direction: Rear Left</string>
    <string name="activity_second_direction_left">Direction: Left</string>
    <string name="activity_second_direction_frontleft">Direction: Front Left</string>
    <string name="activity_second_direction_center">Direction: Center</string>
    <string name="activity_second_request">Request:</string>
    <string name="activity_second_failbutconnected">An error has occurred but the command has been sent!\nVerify that your Roomba vacuum is turned on and the RooWifi card is plugged in.</string>
    <string name="activity_second_clean">Clean</string>
    <string name="activity_second_dock">Dock</string>
    <string name="activity_second_spot">Spot</string>
    <string name="activity_second_manual">Manual mode</string>
    <string name="activity_second_title1">Control of the RooWifi card</string>
    <string name="activity_second_title2">Data of sensors</string>
    <string name="activity_second_unknownerror">Unknown error.</string>
    <string name="activity_second_result">Result: \'</string>
    <string name="activity_second_cantconnect">Unable to connect to the RooWifi card.</string>
    <string name="activity_second_batterylevel">Battery level:</string>
    <string name="activity_second_nbsensorupdate">Number of sensor updates:</string>
    <string name="activity_second_network">Network:</string>
    <string name="activity_second_infos">Roomba Informations:</string>
    <string name="activity_second_temperature">Temperature:</string>

    <string name="activity_second_chargingstate2">Charging state : Charging</string>
    <string name="activity_second_chargingstate4">Charging state : Discharging</string>
    <string name="activity_second_chargingstateunknown">Charging state : Unknown</string>
    <string name="activity_second_loadingdata">Loading data...</string>
    <string name="activity_second_buttonresetcoo">Reset Wifi</string>

    <string name="activity_second_menusettings">Settings</string>
    <string name="activity_second_menuabout">About</string>

    <string name="activity_second_commandtitle">Manual mode</string>
    <string name="activity_second_command">You can now use the joystick to control your Roomba vacuum cleaner!</string>

    <string name="activity_settings_title">Settings</string>
    <string name="activity_settings_modifip">Edit IP address</string>
    <string name="activity_settings_buttonedit">Edit</string>
    <string name="activity_settings_intervaldownload">Choose download interval</string>
    <string name="activity_settings_checkboxintervaldownload">Enable systematic downloading of data</string>
    <string name="activity_settings_intervaldownloadinfo1">The roomba.xml file (containing the sensor data) is updated every 0.5 seconds.</string>
    <string name="activity_settings_intervaldownloadinfo2">With which interval do you want this data to be downloaded to the RooWifi Controller application?</string>
    <string name="activity_settings_intervaldownloadinfo3">The data will be downloaded every 00 seconds.</string>
    <string name="activity_settings_resetsettings">Reset settings</string>
    <string name="activity_settings_buttonreset">Reset</string>
    <string name="activity_settings_advancedmode">Advanced mode</string>
    <string name="activity_settings_checkboxadvancedmode">Enable advanced mode</string>
    <string name="activity_settings_advancedmodeinfo">Advanced mode provides access to some additional information.</string>
    <string name="activity_settings_intervaldownloadinfo4">The data will be downloaded every</string>
    <string name="activity_settings_intervaldownloadinfo5">seconds.</string>
    <string name="activity_settings_settinsreseted">Settings have been reset!</string>
    <string name="activity_settings_advancedmodeenabled">Advanced mode enabled!</string>
    <string name="activity_settings_advancedmodedisabled">Advanced mode disabled!</string>

    <string name="view_about_infos">RooWifi Controller is an application that will allow you to control your RooWifi card! Just enter the IP of it and you can use your Roomba vacuum cleaner!</string>
    <string name="view_about_credits">Credits:\n- Valentin Charbonnier (valentinbreiz.github.io)\n- Ake Exorcist (JoyStick)\n- TinyDB (backed up data management)</string>
    <string name="view_about_creator">Created at the LAB SI of the Lycée Saint-Éxupery in Parentis-en-Born.</string>

    <string name="cantconnect">Unable to connect to the RooWifi card!\nHave you entered the correct IP address?</string>
    <string name="cantconnect1">Unable to connect to the RooWifi card!\nWould you like to edit the IP address?</string>
    <string name="connected1">Connect to</string>
    <string name="connected2">successful!</string>

    <string name="error">Error</string>

    <string name="pdialog_tryconnect">Attempting to connect</string>
    <string name="pdialog_wait">Please wait...</string>

</resources>