<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="labsi.roowificontroller.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="2dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_ipadress"
                android:textColor="#444444"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="192.168.0.0"
                android:ems="10"
                android:hint="192.168.0.0"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="33dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="Connexion"
                android:text="@string/activity_main_button"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="136dp" />

            <TextView
                android:id="@+id/textView67"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" "
                android:textColor="#444444"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_tuto1"
                android:textColor="#444444"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_tuto2"
                android:textColor="#444444"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" "
                android:textColor="#444444"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_tuto3"
                android:textColor="#444444"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView62"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_tuto4"
                android:textColor="#444444"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView65"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" "
                android:textColor="#444444"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/roomba" />

            <TextView
                android:id="@+id/textView66"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" "
                android:textColor="#444444"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView63"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_tuto5"
                android:textColor="#444444"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView64"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_tuto6"
                android:textColor="#444444"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView68"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" "
                android:textColor="#444444"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/roowifi_configuration" />

            <TextView
                android:id="@+id/textView69"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" "
                android:textColor="#444444"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_tuto7"
                android:textColor="#444444"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView71"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_tuto8"
                android:textColor="#444444"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView72"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_tuto9"
                android:textColor="#444444"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView73"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" "
                android:textColor="#444444"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/wifi_connected" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" "
                android:textColor="#444444"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView74"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_tuto10"
                android:textColor="#444444"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
